# simulation_based_imaging

./: .gitignore  CLAUDE.md  PLAN_full_parameter_control.md  PLAN_mesh_pickle.md  README.md  flake.nix  pyproject.toml  ruff.toml  start_server.py
backend/: pyproject.toml
backend/api/: urls.py  views.py
backend/config/: settings.py  urls.py  wsgi.py
cloud/vastai/: README.md  run_worker.sh
control_panel/: pyproject.toml
control_panel/apps/: __init__.py
control_panel/apps/simulation_runner/: __init__.py  __main__.py  app.py
control_panel/apps/simulation_runner/pages/: __init__.py  batch_parameters.py  inverse_models.py  run_batch.py  visualize_batch.py
docs/: inverse_model_features.md
frontend/: index.html  package-lock.json  package.json
frontend/public/voxels/: metadata.json
frontend/src/: main.tsx
frontend/src/components/: ImageCarousel.tsx  Layout.tsx  VideoCarousel.tsx  VoxelComparisonCarousel.tsx  VoxelViewer.tsx
frontend/src/pages/: HomePage.tsx
frontend/src/stores/: themeStore.ts
frontend/src/styles/: HomePage.module.css  Layout.module.css  VideoCarousel.module.css  VoxelComparisonCarousel.module.css  global.css  variables.css
