[project]
name = "sbi-backend"
version = "0.1.0"
description = "Django REST API for Simulation Based Imaging"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0",
    "djangorestframework>=3.14",
    "django-cors-headers>=4.3",
    "sbimaging",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "api"]
